Fixed segment aligns for flex header

--- a/src/partials/elements/_segment.sass
+++ b/src/partials/elements/_segment.sass
@@ -262,12 +262,24 @@
 .ts.segment[class*='center aligned'],
 .ts.segments[class*='center aligned'] .segment
     text-align: center
+
+    .ts.header:not(.aligned)
+        justify-content: center
+
 .ts.segment[class*='left aligned'],
 .ts.segments[class*='left aligned'] .segment
     text-align: left
+
+    .ts.header:not(.aligned)
+        justify-content: flex-start
+
 .ts.segment[class*='right aligned'],
 .ts.segments[class*='right aligned'] .segment
     text-align: right
+
+    .ts.header:not(.aligned)
+        justify-content: flex-end
+
 
 .ts.segment.centered
     margin: 0 auto
